Doodle some more trying to understand where the syntax stops and the semantics begins.

--- a/vtprolog-in-c/Makefile
+++ b/vtprolog-in-c/Makefile
@@ -1,9 +1,25 @@
 
-scanner.c: scanner.re
-	re2c -i scanner.re >scanner.c
+call_graph.pdf: call_graph.dot
+	dot call_graph.dot -Tpdf >call_graph.pdf
 
-test: test_vtprolog
+test: test_vtprolog new_front_end example_input.pro
 	./test_vtprolog
+	./new_front_end <example_input.pro
+
+new_front_end: new_vtprolog_lexer.o new_vtprolog_parser.o
+	gcc new_vtprolog_lexer.o new_vtprolog_parser.o -o new_front_end
+
+new_vtprolog_parser.o: new_vtprolog_parser.c new_vtprolog_parser.h
+	gcc -c new_vtprolog_parser.c -o new_vtprolog_parser.o
+
+new_vtprolog_parser.c new_vtprolog_parser.h: new_vtprolog_parser.lemon
+	lemon new_vtprolog_parser.lemon
+
+new_vtprolog_lexer.o: new_vtprolog_lexer.c new_vtprolog_parser.h
+	gcc -c new_vtprolog_lexer.c -o new_vtprolog_lexer.o
+
+new_vtprolog_lexer.c: new_vtprolog_lexer.re
+	re2c -i new_vtprolog_lexer.re >new_vtprolog_lexer.c
 
 test_vtprolog: test_vtprolog.c vtprolog_as_library.o
 	gcc test_vtprolog.c vtprolog_as_library.o -o test_vtprolog
