Break lots of things, add lots of things. I'm a bad incremental, test-first developer.

--- a/vtprolog-in-c/Makefile
+++ b/vtprolog-in-c/Makefile
@@ -1,31 +1,43 @@
-
-call_graph.pdf: call_graph.dot
-	dot call_graph.dot -Tpdf >call_graph.pdf
+CFLAGS=-Wall -Werror -ansi -pedantic
 
 test: test_vtprolog new_front_end example_input.pro
 	./test_vtprolog
 	./new_front_end <example_input.pro
 
+vtprolog_lines.txt: vtprolog.grammar
+	seq 1 1000 | random_string -g vtprolog.grammar | sed 's/P/./g' >$@
+
+call_graph.pdf: call_graph.dot
+	dot call_graph.dot -Tpdf >$@
+TO_CLEAN += call_graph.pdf
+
 new_front_end: new_vtprolog_lexer.o new_vtprolog_parser.o
-	gcc new_vtprolog_lexer.o new_vtprolog_parser.o -o new_front_end
+	${CC} ${CFLAGS} $^ -o $@
+TO_CLEAN += new_front_end
 
 new_vtprolog_parser.o: new_vtprolog_parser.c new_vtprolog_parser.h
-	gcc -c new_vtprolog_parser.c -o new_vtprolog_parser.o
+	${CC} ${CFLAGS} -c new_vtprolog_parser.c -o $@
+TO_CLEAN += new_vtprolog_parser.o
 
 new_vtprolog_parser.c new_vtprolog_parser.h: new_vtprolog_parser.lemon
-	lemon new_vtprolog_parser.lemon
+	lemon $^
+TO_CLEAN += new_vtprolog_parser.{c,h}
 
 new_vtprolog_lexer.o: new_vtprolog_lexer.c new_vtprolog_parser.h
-	gcc -c new_vtprolog_lexer.c -o new_vtprolog_lexer.o
+	${CC} ${CFLAGS} -c new_vtprolog_lexer.c -o $@
+TO_CLEAN += new_vtprolog_lexer.o
 
 new_vtprolog_lexer.c: new_vtprolog_lexer.re
-	re2c -i new_vtprolog_lexer.re >new_vtprolog_lexer.c
+	re2c -i new_vtprolog_lexer.re >$@
+TO_CLEAN += new_vtprolog_lexer.c
 
 test_vtprolog: test_vtprolog.c vtprolog_as_library.o
-	gcc test_vtprolog.c vtprolog_as_library.o -o test_vtprolog
+	${CC} ${CFLAGS} test_vtprolog.c vtprolog_as_library.o -o $@
+TO_CLEAN += test_vtprolog
 
 vtprolog_as_library.o: vtprolog.c
-	gcc -c vtprolog.c -o vtprolog_as_library.o -DBUILD_AS_LIBRARY
+	${CC} ${CFLAGS} -c $^ -DBUILD_AS_LIBRARY -o $@
+TO_CLEAN += vtprolog_as_library.o
 
 clean:
-	rm -rf *~ *.o test_vtprolog
+	rm -rf *~ ${TO_CLEAN}
