Adding the buffered-io component.

--- a/educational-vms/string_rewriting/software_tools_m4/trivial_macro_processor/Makefile
+++ b/educational-vms/string_rewriting/software_tools_m4/trivial_macro_processor/Makefile
@@ -1,3 +1,5 @@
+# configuration
+
 CFLAGS=-ansi
 
 default: test
@@ -6,6 +8,7 @@ default: test
 # objects
 
 OBJS += table.o
+OBJS += io.o
 
 TO_CLEAN += $(OBJS)
 
@@ -14,10 +17,20 @@ TO_CLEAN += $(OBJS)
 table_driver: $(OBJS)
 TO_CLEAN += table_driver
 
+io_driver: $(OBJS)
+TO_CLEAN += io_driver
+
 # convenience targets
 
-test: table_driver table_driver_test_script.txt table_driver_gold_output.txt
+test_table_driver: table_driver table_driver_test_script.txt table_driver_gold_output.txt
 	./table_driver <table_driver_test_script.txt | diff -u - table_driver_gold_output.txt
+.PHONY: test_table_driver
+
+test_io_driver: io_driver io_driver_test_script.txt
+	./io_driver <io_driver_test_script.txt
+.PHONY: test_io_driver
+
+test: test_table_driver test_io_driver
 .PHONY: test
 
 clean:
