--- a/educational-vms/string_rewriting/software_tools_m4/trivial_macro_processor/Makefile
+++ b/educational-vms/string_rewriting/software_tools_m4/trivial_macro_processor/Makefile
@@ -20,6 +20,9 @@ TO_CLEAN += table_driver
 io_driver: $(OBJS)
 TO_CLEAN += io_driver
 
+trivial: $(OBJS)
+TO_CLEAN += trivial
+
 # convenience targets
 
 test_table_driver: table_driver table_driver_test_script.txt table_driver_gold_output.txt
@@ -30,7 +33,11 @@ test_io_driver: io_driver io_driver_test_script.txt
 	./io_driver <io_driver_test_script.txt
 .PHONY: test_io_driver
 
-test: test_table_driver test_io_driver
+test_trivial: trivial trivial_test_script.txt trivial_gold_output.txt
+	./trivial <trivial_test_script.txt | diff -u - trivial_gold_output.txt
+.PHONY: test_trivial
+
+test: test_table_driver test_io_driver test_trivial
 .PHONY: test
 
 clean:
