Change from 2.6 to 2.7, change name of package from curses to little_curses

--- a/little_python_curses_engine/Makefile
+++ b/little_python_curses_engine/Makefile
@@ -1,5 +1,6 @@
-CXXFLAGS += -I/usr/include/python2.6
-LDLIBS += -lpython2.6
+PYTHON_VERSION = 2.7
+CXXFLAGS += -I/usr/include/python${PYTHON_VERSION}
+LDLIBS += -lpython${PYTHON_VERSION}
 LDLIBS += -lcurses
 
 default: py_curses
