Rename file, underscores to hyphens

--- a/practice-problems/Makefile
+++ b/practice-problems/Makefile
@@ -1,12 +1,19 @@
+.PHONY: all
+all: run-test
+
+.PHONY: clean
+clean:
+	rm -f test-driver *.o
+
 .PHONY: run-test
 run-test: test-driver
 	./test-driver
 
-test-driver: googletest-master/bazel-bin/libgtest_main.a people_indexes_test.o people.o googletest-master/bazel-bin/libgtest.a
-	g++ -o test-driver googletest-master/bazel-bin/libgtest_main.a people_indexes_test.o people.o googletest-master/bazel-bin/libgtest.a -lpthread
+test-driver: googletest-master/bazel-bin/libgtest_main.a people-indexes-test.o people.o googletest-master/bazel-bin/libgtest.a
+	g++ -o test-driver googletest-master/bazel-bin/libgtest_main.a people-indexes-test.o people.o googletest-master/bazel-bin/libgtest.a -lpthread
 
-people_indexes_test.o: googletest-master/googletest/include/gtest/gtest.h googletest-master/googlemock/include/gmock/gmock.h people_indexes_test.cpp
-	g++ -c -o people_indexes_test.o -Igoogletest-master/googletest/include -Igoogletest-master/googlemock/include people_indexes_test.cpp
+people-indexes-test.o: googletest-master/googletest/include/gtest/gtest.h googletest-master/googlemock/include/gmock/gmock.h people-indexes-test.cpp
+	g++ -c -o people-indexes-test.o -Igoogletest-master/googletest/include -Igoogletest-master/googlemock/include people-indexes-test.cpp
 
 people.o: people.cpp
 	g++ -c -o people.o people.cpp
