--- a/practice-problems/Makefile
+++ b/practice-problems/Makefile
@@ -9,11 +9,11 @@ clean:
 run-test: test-driver
 	./test-driver
 
-test-driver: googletest-master/bazel-bin/libgtest_main.a people-indexes-test.o people.o googletest-master/bazel-bin/libgtest.a
-	g++ -o test-driver googletest-master/bazel-bin/libgtest_main.a people-indexes-test.o people.o googletest-master/bazel-bin/libgtest.a -lpthread
+test-driver: googletest-master/bazel-bin/libgtest_main.a people-indexes-test.o people-indexes.o googletest-master/bazel-bin/libgtest.a
+	g++ -o test-driver googletest-master/bazel-bin/libgtest_main.a people-indexes-test.o people-indexes.o googletest-master/bazel-bin/libgtest.a -lpthread
 
 people-indexes-test.o: googletest-master/googletest/include/gtest/gtest.h googletest-master/googlemock/include/gmock/gmock.h people-indexes-test.cpp
 	g++ -c -o people-indexes-test.o -Igoogletest-master/googletest/include -Igoogletest-master/googlemock/include people-indexes-test.cpp
 
-people.o: people.cpp
-	g++ -c -o people.o people.cpp
+people-indexes.o: people-indexes.cpp
+	g++ -c -o people-indexes.o people-indexes.cpp
